--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+APP_VERSION=0.0.1
 APP_ENV=dev
 APP_SECRET=wh65qabx5rkh3bu6etthu9g48jccjbti
 TRUSTED_PROXIES=127.0.0.0/8
@@ -29,7 +30,7 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://mailhog:1025
 ###< symfony/mailer ###
 
 ###> symfony/lock ###
