--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.16.0",
     "@symfony/webpack-encore": "^4.0.0",
     "core-js": "^3.0.0",
+    "cypress": "^12.6.0",
     "postcss": "^8.0.9",
     "postcss-loader": "^7.0.1",
     "regenerator-runtime": "^0.13.2",
@@ -20,7 +21,8 @@
     "dev-server": "encore dev-server",
     "dev": "encore dev",
     "watch": "encore dev --watch",
-    "build": "encore production --progress"
+    "build": "encore production --progress",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@oruga-ui/oruga-next": "^0.5.9",
