--- a/frontends/member_module/package.json
+++ b/frontends/member_module/package.json
@@ -49,16 +49,16 @@
   },
   "devDependencies": {
     "@types/dropzone": "^5.7.4",
-    "@types/node": "^16.11.56",
+    "@types/node": "^20.11.0",
     "@types/twig": "^1.12.9",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.12",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.9",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vue-tsc": "^0.40.7"
   }
 }
