--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,6 +14,7 @@
     <file>config/</file>
     <file>public/</file>
     <file>src/</file>
+    <file>application/</file>
     <file>tests/</file>
 
 </ruleset>
