--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mollie/mollie-api-php": "^2.64",
         "nelmio/security-bundle": "^2.12",
         "phpoffice/phpspreadsheet": "^1.26",
+        "resend/resend-php": "^0.10.0",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/flex": "^2.0",
         "symfony/uid": "^5.1"
