YK-47 Sentry logging inbouwen op productie.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "nelmio/security-bundle": "^2.12",
         "phpoffice/phpspreadsheet": "^1.26",
         "resend/resend-php": "^0.10.0",
+        "sentry/sentry-symfony": "^4.13",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/flex": "^2.0",
         "symfony/uid": "^5.1"
@@ -51,7 +52,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "drupol/composer-packages": true,
-            "symfony/flex": true
+            "symfony/flex": true,
+            "php-http/discovery": true
         }
     },
     "extra": {
