YK-63 Fix sync between subscription and member when payment approved.

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,16 @@ LOCK_DSN=flock
 ###< symfony/lock ###
 
 UPLOAD_FOLDER=uploads
+
+# Mollie settings
+MOLLIE_API_KEY=
+MOLLIE_PARTNER_ID=
+MOLLIE_PROFILE_ID=
+MOLLIE_REDIRECT_BASE_URL=
+
+# Resend.com API key (for two-factor authentication)
+RESEND_API_KEY=
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
