--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,13 @@
         "sentry/sentry-symfony": "^4.13",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/flex": "^2.0",
-        "symfony/uid": "^5.1"
+        "symfony/uid": "^5.1",
+        "twig/cssinliner-extra": "^3.7",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.7",
+        "twig/intl-extra": "^3.8",
+        "twig/markdown-extra": "^3.7",
+        "twig/twig": "^2.12|^3.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
