--- a/.github/workflows/php_build_and_qa_test.yml
+++ b/.github/workflows/php_build_and_qa_test.yml
@@ -2,7 +2,7 @@ name: PHP Build QA and Test
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: [ "master", "development" ]
   pull_request:
     branches: [ "master" ]
 
