--- a/.github/workflows/php_build_and_qa_test.yml
+++ b/.github/workflows/php_build_and_qa_test.yml
@@ -47,7 +47,7 @@ jobs:
           touch var/data.db
 
       - name: QA CS
-        run: ./vendor/bin/phpcs check
+        run: ./vendor/bin/php-cs-fixer check
         
       - name: QA STAN
         run: ./vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application
