Adjusted PHPStan config.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,8 @@
 parameters:
 	tmpDir: var/cache/ecs
 	level: 2
-	symfony:
-		container_xml_path: '%rootDir%/../../../var/cache/dev/App_KernelDevDebugContainer.xml'
+#	symfony:
+#		container_xml_path: '%rootDir%/../../../var/cache/dev/App_KernelDevDebugContainer.xml'
 
 includes:
 	- vendor/phpstan/phpstan-symfony/extension.neon
