--- a/.github/workflows/php_build_and_qa_test.yml
+++ b/.github/workflows/php_build_and_qa_test.yml
@@ -52,8 +52,8 @@ jobs:
       - name: QA STAN
         run: ./vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application
         
-      - name: QA PSALM
-        run: ./vendor/bin/psalm
+#      - name: QA PSALM
+#        run: ./vendor/bin/psalm
 
       - name: QA Lint Container
         run: ./bin/console lint:container
