--- a/.github/workflows/php_build_and_qa_test.yml
+++ b/.github/workflows/php_build_and_qa_test.yml
@@ -55,14 +55,14 @@ jobs:
 #      - name: QA PSALM
 #        run: ./vendor/bin/psalm
 
-      - name: Set access rights for bin console
-        run: chmod 777 ./bin/console
+#      - name: Set access rights for bin console
+#        run: chmod 777 ./bin/console
 
-      - name: QA Lint Container
-        run: ./bin/console lint:container
+#      - name: QA Lint Container
+#        run: ./bin/console lint:container
 
-      - name: QA Lint Twig
-        run: ./bin/console lint:twig
+#      - name: QA Lint Twig
+#        run: ./bin/console lint:twig
 
 #      - name: Execute tests (Unit & Integration Tests) via PestPHP
 #        run: ./vendor/bin/pest
