--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 # define your env variables for the test env here
 APP_VERSION=0.0.1
-APP_ENV=test
+APP_ENV=dev
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
