--- a/.github/workflows/php_build_and_qa_test.yml
+++ b/.github/workflows/php_build_and_qa_test.yml
@@ -59,14 +59,14 @@ jobs:
       - name: QA STAN
         run: ./vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application
         
+      - name: QA Lint Container
+        run: ./bin/console lint:container
+
+      - name: QA Lint Twig
+        run: ./bin/console lint:twig
+        
       - name: QA PSALM
         run: ./vendor/bin/psalm
-
-#      - name: QA Lint Container
-#        run: ./bin/console lint:container
-
-#      - name: QA Lint Twig
-#        run: ./bin/console lint:twig
 
 #      - name: Execute tests (Unit & Integration Tests) via PestPHP
 #        run: ./vendor/bin/pest
