--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "private": false,
+  "version": "0.0.2",
   "scripts": {
     "dev-server": "encore dev-server",
     "dev": "encore dev",
