--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.13",
         "mockery/mockery": "^1.6",
+        "nelmio/api-doc-bundle": "^4.26",
         "pestphp/pest": "^1.23",
         "phpstan/phpstan": "^1.9.0",
         "phpstan/phpstan-doctrine": "^1.3.0",
